--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1"
   },
@@ -19,6 +21,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "json-server": "^0.14.2",
     "lint-staged": "^8.1.4",
     "vue-template-compiler": "^2.5.21"
   },
@@ -30,5 +33,14 @@
       "vue-cli-service lint",
       "git add"
     ]
+  },
+  "prettier": {
+    "printWidth": 100,
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "bracketSpacing": true
   }
 }
